--- a/03-19-2022Overlay/overlay.html
+++ b/03-19-2022Overlay/overlay.html
@@ -3,11 +3,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.js"></script>
        
-
+<div class="verticalHair"></div>
+<div class="horizontalHair"></div>
 
 <body>  
 
-    <!-- <div id="supporterWorkspace"> -->
+    <div id="supporterWorkspace">
 
         <span class="subSide">
             <div id="subName" class="supporterNames">Last Subscriber</div>
@@ -27,7 +28,7 @@
             <div id="cheerName" class="supporterNames">Last Cheer</div>
         </span>
 
-    <!-- </div> -->
+    </div>
 
     <canvas id="alertUsername"></canvas>
 
