--- a/03-19-2022Overlay/overlay.html
+++ b/03-19-2022Overlay/overlay.html
@@ -3,8 +3,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.js"></script>
        
-<div class="verticalHair"></div>
-<div class="horizontalHair"></div>
+<!-- <div class="verticalHair"></div>
+<div class="horizontalHair"></div> -->
 
 <body>  
 
@@ -19,7 +19,7 @@
         <div>
             <div><img src="ShroudedLogo.png" id="defaultAnimation"></div>
             <div id="bar"></div>
-            <div id="progressPercentage"></div>
+            <div id="progressPercentage">100%</div>
         </div>
 
         <span class="cheerSide">
@@ -30,7 +30,7 @@
 
     </div>
 
-    <canvas id="alertUsername"></canvas>
+    <canvas id="particleCanvas"></canvas>
 
 <link rel="stylesheet" href="overlay.css">
 <script src="overlay.js"></script>
