added-particle-opacity

--- a/03-19-2022Overlay/overlay.html
+++ b/03-19-2022Overlay/overlay.html
@@ -30,6 +30,8 @@
 
     </div>
 
+    <div id="testdiv"></div>
+
     <canvas id="particleCanvas"></canvas>
 
 <link rel="stylesheet" href="overlay.css">
