--- a/03-19-2022Overlay/progressBar.html
+++ b/03-19-2022Overlay/progressBar.html
@@ -13,7 +13,7 @@
         <div>
             <div><img src="ShroudedLogo.png" id="defaultAnimation"></div>
             <div id="bar"></div>
-            <div id="progressPercentage">100%</div>
+            <div id="percentage">100%</div>
         </div>
 
     </div>
